PL/src/Pr2b/JavaCC/AnalizadorSintacticoTiny.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny.java */
package Pr2b.JavaCC;

public class AnalizadorSintacticoTiny implements AnalizadorSintacticoTinyConstants {

  final public void ProgramaP() throws ParseException {
    Programa();
    jj_consume_token(0);
  }

  final public void Programa() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case proc:
    case var:
    case type:
      Declaraciones();
      jj_consume_token(42);
      Instrucciones();
      break;
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case If:
    case True:
    case While:
    case call:
    case False:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case Id:
    case cadena:
    case 44:
    case 48:
    case 54:
    case 57:
      Instrucciones();
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Declaraciones() throws ParseException {
    Declaracion();
    RD();
  }

  final public void RD() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      Declaracion();
      RD();
      break;
    default:
      jj_la1[1] = jj_gen;

    }
  }

  final public void Declaracion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case var:
      DeclaracionVar();
      break;
    case type:
      DeclaracionTipo();
      break;
    case proc:
      DeclaracionProc();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DeclaracionVar() throws ParseException {
    jj_consume_token(var);
    Tipo();
    jj_consume_token(Id);
  }

  final public void DeclaracionTipo() throws ParseException {
    jj_consume_token(type);
    Tipo();
    jj_consume_token(Id);
  }

  final public void DeclaracionProc() throws ParseException {
    jj_consume_token(proc);
    jj_consume_token(Id);
    ParametrosFormales();
    Bloque();
  }

  final public void ParametrosFormales() throws ParseException {
    jj_consume_token(44);
    RPF();
  }

  final public void RPF() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case string:
    case record:
    case Int:
    case real:
    case bool:
    case array:
    case pointer:
    case Id:
      Parametros();
      jj_consume_token(45);
      break;
    case 45:
      jj_consume_token(45);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Parametros() throws ParseException {
    Parametro();
    RPs();
  }

  final public void RPs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      Parametro();
      RPs();
      break;
    default:
      jj_la1[4] = jj_gen;

    }
  }

  final public void Parametro() throws ParseException {
    Tipo();
    RP();
  }

  final public void RP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      jj_consume_token(Id);
      break;
    case Id:
      jj_consume_token(Id);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Bloque() throws ParseException {
    jj_consume_token(48);
    Programa();
    jj_consume_token(49);
  }

  final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case string:
    case Int:
    case real:
    case bool:
      TipoBasico();
      break;
    case Id:
      jj_consume_token(Id);
      break;
    case array:
      TipoArray();
      break;
    case record:
      TipoRegistro();
      break;
    case pointer:
      TipoPuntero();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TipoBasico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Int:
      jj_consume_token(Int);
      break;
    case real:
      jj_consume_token(real);
      break;
    case bool:
      jj_consume_token(bool);
      break;
    case string:
      jj_consume_token(string);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TipoArray() throws ParseException {
    jj_consume_token(array);
    jj_consume_token(50);
    jj_consume_token(NumInt);
    jj_consume_token(51);
    jj_consume_token(of);
    Tipo();
  }

  final public void TipoRegistro() throws ParseException {
    jj_consume_token(record);
    jj_consume_token(48);
    Campos();
    jj_consume_token(49);
  }

  final public void Campos() throws ParseException {
    Campo();
    RC();
  }

  final public void RC() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      Campo();
      RC();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
  }

  final public void Campo() throws ParseException {
    Tipo();
    jj_consume_token(Id);
  }

  final public void TipoPuntero() throws ParseException {
    jj_consume_token(pointer);
    Tipo();
  }

  final public void Instrucciones() throws ParseException {
    Instruccion();
    RI();
  }

  final public void RI() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      Instruccion();
      RI();
      break;
    default:
      jj_la1[9] = jj_gen;

    }
  }

  final public void Instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 54:
    case 57:
      InstrAsig();
      break;
    case If:
      InstrIfThen();
      break;
    case While:
      InstrWhile();
      break;
    case read:
      InstrLectura();
      break;
    case write:
      InstrEscritura();
      break;
    case nl:
      InstrNewLine();
      break;
    case New:
      InstrReservMem();
      break;
    case delete:
      InstrLibMem();
      break;
    case call:
      InstrInvocProc();
      break;
    case 48:
      Bloque();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void InstrAsig() throws ParseException {
    E0();
    jj_consume_token(52);
    E0();
  }

  final public void BloqueOpcional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case If:
    case True:
    case While:
    case call:
    case False:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case Id:
    case cadena:
    case 44:
    case 48:
    case 54:
    case 57:
      Instrucciones();
      break;
    default:
      jj_la1[11] = jj_gen;

    }
  }

  final public void InstrIfThen() throws ParseException {
    InitIfThen();
    RIT();
  }

  final public void RIT() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Else:
      jj_consume_token(Else);
      BloqueOpcional();
      jj_consume_token(endif);
      break;
    case endif:
      jj_consume_token(endif);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void InitIfThen() throws ParseException {
    jj_consume_token(If);
    E0();
    jj_consume_token(then);
    BloqueOpcional();
  }

  final public void InstrWhile() throws ParseException {
    jj_consume_token(While);
    E0();
    jj_consume_token(Do);
    BloqueOpcional();
    jj_consume_token(endwhile);
  }

  final public void InstrLectura() throws ParseException {
    jj_consume_token(read);
    E0();
  }

  final public void InstrEscritura() throws ParseException {
    jj_consume_token(write);
    E0();
  }

  final public void InstrNewLine() throws ParseException {
    jj_consume_token(nl);
  }

  final public void InstrReservMem() throws ParseException {
    jj_consume_token(New);
    E0();
  }

  final public void InstrLibMem() throws ParseException {
    jj_consume_token(delete);
    E0();
  }

  final public void InstrInvocProc() throws ParseException {
    jj_consume_token(call);
    jj_consume_token(Id);
    ParametrosReales();
  }

  final public void ParametrosReales() throws ParseException {
    jj_consume_token(44);
    RPR();
  }

  final public void RPR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 54:
    case 57:
      Expresiones();
      jj_consume_token(45);
      break;
    case 45:
      jj_consume_token(45);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Expresiones() throws ParseException {
    E0();
    RE();
  }

  final public void RE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      E0();
      RE();
      break;
    default:
      jj_la1[14] = jj_gen;

    }
  }

  final public void InstrCompuesta() throws ParseException {
    Bloque();
  }

  final public void EBasica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
      jj_consume_token(NumInt);
      break;
    case NumReal:
      jj_consume_token(NumReal);
      break;
    case True:
      jj_consume_token(True);
      break;
    case False:
      jj_consume_token(False);
      break;
    case cadena:
      jj_consume_token(cadena);
      break;
    case Id:
      jj_consume_token(Id);
      break;
    case Null:
      jj_consume_token(Null);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void E0() throws ParseException {
    E1();
    RE0();
  }

  final public void RE0() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 53:
      jj_consume_token(53);
      E0();
      break;
    case 54:
      jj_consume_token(54);
      E1();
      break;
    default:
      jj_la1[16] = jj_gen;

    }
  }

  final public void E1() throws ParseException {
    E2();
    RE1();
  }

  final public void RE1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case and:
    case or:
      op1();
      E2();
      RE1();
      break;
    default:
      jj_la1[17] = jj_gen;

    }
  }

  final public void E2() throws ParseException {
    E3();
    RE2();
  }

  final public void RE2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:
      op2();
      E3();
      RE2();
      break;
    default:
      jj_la1[18] = jj_gen;

    }
  }

  final public void E3() throws ParseException {
    E4();
    RE3();
  }

  final public void RE3() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
    case 64:
    case 65:
      op3();
      E4();
      break;
    default:
      jj_la1[19] = jj_gen;

    }
  }

  final public void E4() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      E5();
      break;
    case not:
      jj_consume_token(not);
      E4();
      break;
    case NumInt:
    case NumReal:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 57:
      E5();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void E5() throws ParseException {
    E6();
    RE5();
  }

  final public void RE5() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      E0();
      jj_consume_token(51);
      RE5();
      break;
    case 55:
      jj_consume_token(55);
      jj_consume_token(Id);
      RE5();
      break;
    case 56:
      jj_consume_token(56);
      jj_consume_token(Id);
      RE5();
      break;
    default:
      jj_la1[21] = jj_gen;

    }
  }

  final public void E6() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      E6();
      break;
    case NumInt:
    case NumReal:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
      E7();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void E7() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
      E0();
      jj_consume_token(45);
      break;
    case NumInt:
    case NumReal:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
      EBasica();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void op1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case and:
      jj_consume_token(and);
      break;
    case or:
      jj_consume_token(or);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void op2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
      jj_consume_token(58);
      break;
    case 59:
      jj_consume_token(59);
      break;
    case 60:
      jj_consume_token(60);
      break;
    case 61:
      jj_consume_token(61);
      break;
    case 62:
      jj_consume_token(62);
      break;
    case 63:
      jj_consume_token(63);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void op3() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      break;
    case 64:
      jj_consume_token(64);
      break;
    case 65:
      jj_consume_token(65);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  public AnalizadorSintacticoTinyTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[27];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_0();
      jj_la1_1();
      jj_la1_2();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x2129d090,0x0,0x8000,0x5e002000,0x0,0x0,0x5e002000,0x1c002000,0x0,0x0,0x21295090,0x21295090,0x140000,0x20085090,0x0,0x20084090,0x0,0xc00,0x0,0x0,0x20085090,0x0,0x20084090,0x20084090,0xc00,0x0,0x0,};
   }
   private static void jj_la1_1() {
      jj_la1_1 = new int[] {0x24113fe,0x800,0xc0,0x2101,0x4000,0x8100,0x101,0x0,0x800,0x800,0x241133e,0x241133e,0x0,0x2403300,0x4000,0x300,0x600000,0x0,0xfc000000,0x2000000,0x2401300,0x1840000,0x2001300,0x1300,0x0,0xfc000000,0x2000000,};
   }
   private static void jj_la1_2() {
      jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x3,0x0,0x0,0x0,0x0,0x0,0x0,0x3,};
   }

  public AnalizadorSintacticoTiny(java.io.InputStream stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AnalizadorSintacticoTinyTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  public AnalizadorSintacticoTiny(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AnalizadorSintacticoTinyTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  public AnalizadorSintacticoTiny(AnalizadorSintacticoTinyTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  public void ReInit(AnalizadorSintacticoTinyTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;

  public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[66];
    for (int i = 0; i < 66; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 27; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
          if ((jj_la1_2[i] & (1<<j)) != 0) {
            la1tokens[64+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 66; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

                                       }
